added CLAS annotations for pubs

--- a/AaronStump.bib
+++ b/AaronStump.bib
@@ -10,6 +10,7 @@
   number    = {{ICFP}},
   pages     = {122:1--122:25},
   year      = {2020},
+  options = {contrib=\majorc},
   url       = {https://doi.org/10.1145/3409004},
   doi       = {10.1145/3409004},
   timestamp = {Wed, 17 Feb 2021 00:00:00 +0100},
@@ -26,6 +27,7 @@
   booktitle = {{IFL} 2020: 32nd Symposium on Implementation and Application of Functional
                Languages, Virtual Event / Canterbury, UK, September 2-4, 2020},
   pages     = {93--103},
+  options = {contrib=\secondc},
   publisher = {{ACM}},
   year      = {2020},
   url       = {https://doi.org/10.1145/3462172.3462194},
@@ -41,6 +43,7 @@
                Larry Diehl},
   editor    = {Max S. New and
                Sam Lindley},
+  options = {contrib=\secondc},
   title     = {Efficient lambda encodings for Mendler-style coinductive types in
                Cedille},
   booktitle = {Proceedings Eighth Workshop on Mathematically Structured Functional
@@ -60,6 +63,8 @@
   author    = {Christopher Jenkins and
                Aaron Stump},
   title     = {Monotone recursive types and recursive data representations in Cedille},
+  options = {contrib=\majorc},
+  pages     = {109 pages},                  
   journal   = {Mathematical Structures in Computer Science},
   note       = {\sf accepted September 2021},
 }
@@ -73,6 +78,7 @@
   title     = {Quotients by Idempotent Functions in Cedille},
   booktitle = {Trends in Functional Programming - 20th International Symposium, {TFP}
                2019, Vancouver, BC, Canada, June 12-14, 2019, Revised Selected Papers},
+  options = {contrib=\secondc},
   series    = {Lecture Notes in Computer Science},
   volume    = {12053},
   pages     = {1--20},
@@ -90,6 +96,7 @@
   editor    = {Dale Miller and
                Ivan Scagnetto},
   title     = {A Weakly Initial Algebra for Higher-Order Abstract Syntax in Cedille},
+  options = {contrib=\majorc},
   booktitle = {Proceedings of the Fourteenth Workshop on Logical Frameworks and Meta-Languages:
                Theory and Practice, LFMTP@LICS 2019, Vancouver, Canada, 22nd June
                2019},
@@ -108,6 +115,7 @@
   author    = {Aaron Stump},
   title     = {From realizability to induction via dependent intersection},
   journal   = {Ann. Pure Appl. Log.},
+    options = {contrib=\majorc},
   volume    = {169},
   number    = {7},
   pages     = {637--655},
@@ -126,6 +134,7 @@
   title     = {Generic zero-cost reuse for dependent types},
   journal   = {Proc. {ACM} Program. Lang.},
   volume    = {2},
+   options = {contrib=\secondc},
   number    = {{ICFP}},
   pages     = {104:1--104:30},
   year      = {2018},
@@ -141,6 +150,7 @@
                Aaron Stump},
   editor    = {June Andronick and
                Amy P. Felty},
+  options = {contrib=\majorc},                  
   title     = {Generic derivation of induction for impredicative encodings in Cedille},
   booktitle = {Proceedings of the 7th {ACM} {SIGPLAN} International Conference on
                Certified Programs and Proofs, {CPP} 2018, Los Angeles, CA, USA, January
@@ -158,6 +168,7 @@
 @inproceedings{DBLP:conf/ifl/JenkinsS18,
   author    = {Christopher Jenkins and
                Aaron Stump},
+ options = {contrib=\secondc},
   editor    = {Matteo Cimini and
                Jay McCarthy},
   title     = {Spine-local Type Inference},
@@ -178,6 +189,7 @@
   author    = {Denis Firsov and
                Richard Blair and
                Aaron Stump},
+  options = {contrib=\secondc},
   editor    = {Jeremy Avigad and
                Assia Mahboubi},
   title     = {Efficient Mendler-Style Lambda-Encodings in Cedille},
