--- a/clas-cv.tex
+++ b/clas-cv.tex
@@ -23,7 +23,8 @@
 \input{macros}
 
 %% Comment this out if you do not want the new stuff to be in red
-\renewcommand{\new}[1]{\textcolor{red}{#1}}
+\renewcommand{\new}[1]{\textcolor{blue}{#1}}
+\newcommand{\newcolor}[0]{\color{blue}}
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 %%% Comment one or the other commands below depending on 
@@ -162,6 +163,7 @@ Iowa City, Iowa 52242
 \smallskip
 
 \quad
+{
 \begin{tabular}{l@{\quad\ }l}
  2021
  & {\bf Test of Time award}, Logic in Computer Science (LICS) conference, for the \\
@@ -173,7 +175,7 @@ Iowa City, Iowa 52242
  \ & twenty others.
  \\[.5ex]
 \end{tabular}
-
+}
 
 %-------------------------
 \subsection*{Memberships}
