updated for January 2023 review

--- a/AaronStump.bib
+++ b/AaronStump.bib
@@ -1,3 +1,42 @@
+@inproceedings{DBLP:conf/types/JenkinsMS21,
+  author    = {Christa Jenkins and
+               Andrew Marmaduke and
+               Aaron Stump},
+  editor    = {Henning Basold and
+               Jesper Cockx and
+               Silvia Ghilezan},
+  title     = {Simulating Large Eliminations in Cedille},
+  booktitle = {27th International Conference on Types for Proofs and Programs, {TYPES}
+               2021, June 14-18, 2021, Leiden, The Netherlands (Virtual Conference)},
+  options = {contrib=\secondc},
+  series    = {LIPIcs},
+  volume    = {239},
+  pages     = {9:1--9:22},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2021},
+  url       = {https://doi.org/10.4230/LIPIcs.TYPES.2021.9},
+  doi       = {10.4230/LIPIcs.TYPES.2021.9},
+  timestamp = {Thu, 04 Aug 2022 15:11:21 +0200},
+  biburl    = {https://dblp.org/rec/conf/types/JenkinsMS21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/mscs/JenkinsS21,
+  author    = {Christopher Jenkins and
+               Aaron Stump},
+  title     = {Monotone recursive types and recursive data representations in Cedille},
+  options = {contrib=\majorc},
+  journal   = {Math. Struct. Comput. Sci.},
+  volume    = {31},
+  number    = {6},
+  pages     = {682--745},
+  year      = {2021},
+  url       = {https://doi.org/10.1017/S0960129521000402},
+  doi       = {10.1017/S0960129521000402},
+  timestamp = {Wed, 23 Feb 2022 11:16:44 +0100},
+  biburl    = {https://dblp.org/rec/journals/mscs/JenkinsS21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @article{DBLP:journals/pacmpl/StumpJSM20,
   author    = {Aaron Stump and
@@ -57,16 +96,6 @@
   timestamp = {Fri, 08 May 2020 16:00:57 +0200},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2005-00199.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{DBLP:journals/corr/abs-2001-02828,
-  author    = {Christopher Jenkins and
-               Aaron Stump},
-  title     = {Monotone recursive types and recursive data representations in Cedille},
-  options = {contrib=\majorc},
-  pages     = {109 pages},                  
-  journal   = {Mathematical Structures in Computer Science},
-  note       = {\sf accepted September 2021},
 }
 
 @inproceedings{DBLP:conf/sfp/MarmadukeJS19,
@@ -208,10 +237,17 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-
-@book{10.1145/2841316,
-author = {Stump, Aaron},
-title = {Verified Functional Programming in Agda},
-year = {2016},
-isbn = {9781970001273},
-publisher = {Association for Computing Machinery and Morgan \& Claypool}}
+@article{DBLP:journals/jfp/Stump17,
+  author    = {Aaron Stump},
+  title     = {The calculus of dependent lambda eliminations},
+  journal   = {J. Funct. Program.},
+    options = {contrib=\majorc},
+  volume    = {27},
+  pages     = {e14},
+  year      = {2017},
+  url       = {https://doi.org/10.1017/S0956796817000053},
+  doi       = {10.1017/S0956796817000053},
+  timestamp = {Tue, 13 Jun 2017 17:07:39 +0200},
+  biburl    = {https://dblp.org/rec/journals/jfp/Stump17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
