--- a/clas-cv.tex
+++ b/clas-cv.tex
@@ -14,8 +14,8 @@
 %---------------------------------------------------------
 % CV Dates
 %---------------------------------------------------------
-\newcommand{\fromdate}{August 2018}
-\newcommand{\todate}{August 2021}
+\newcommand{\fromdate}{January 2017}
+\newcommand{\todate}{December 2022}
 \newcommand{\cvdate}{\fromdate\ -- \todate}
 \newcommand{\currdate}{\today}
 %---------------------------------------------------------
@@ -204,35 +204,50 @@ Iowa City, Iowa 52242
 %------------------------------------------------------
 \smallskip
 
-\begin{tabular}{| l | l | p{15em} | c | c |}
+\begin{tabular}{| l | l | p{15em} | c |}
  \hline
- {\bf Term} & {\bf Course \#} & {\bf Title} & {\bf Ten-day}    & {\bf Final} \\ 
-            &                 &             & {\bf Enroll.} & {\bf Enroll.} \\ 
+ {\bf Term} & {\bf Course \#} & {\bf Title}    & {\bf Final} \\ 
+            &                 &             & {\bf Enroll.} \\ 
  \hline
+ \hline
+ Fall 2022
+ & CS:4330:0001 & Theory of Computation
+ & 45
+ \\
+ \hline
+ Spring 2022
+ & CS:3820:0001 & Programming Language Concepts
+ & 115
+ \\
+ \hline
+ Fall 2021
+ & CS:4330:0001 & Theory of Computation
+ & 29
+ \\
  \hline
  Spring 2021
  & CS:3820:0001 & Programming Language Concepts
- & \  & 83
+ & 83
  \\
  \hline
  Fall 2020
  & CS:5860:0001 & Lambda Calculus and Applications
- & \  & 13
+ & 13
  \\
  \hline
  Spring 2020
  & CS:3820:0001 & Programming Language Concepts
- & \  & 83
+ & 83
  \\
  \hline
  Spring 2019
  & CS:5850:0001  & Programming Language Foundations
- & \  & 11
+ & 11
  \\
  \hline
  Spring 2019
  & CS:3820:0001 & Programming Language Concepts
- & \  & 56
+ & 56
  \\
  \hline
 \end{tabular}
@@ -252,6 +267,12 @@ Iowa City, Iowa 52242
  Fall 2020 -- Spring 2021
  & MCS Advisor, \# Students: 25 (approx.)
  \\[.5ex]
+ Fall 2021 -- Spring 2022
+ & \# Students: 20 (approx.)
+ \\[.5ex]
+ Fall 2022 -- Spring 2023
+ & \# Students: 20 (approx.)
+ \\[.5ex]
 \end{tabular}
 
 %-------------------------------
@@ -266,26 +287,35 @@ Iowa City, Iowa 52242
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{30em}} 
+ Fall 2017 -- present
+ & Jenkins, Christopher; final dissertation expected Spring 2023
+ \\[.5ex]
+ Fall 2017 -- present
+ & Cantor, Anthony; final dissertation expected Fall 2023
+ \\[.5ex]
+ Fall 2018 -- present
+ & Marmaduke, Andrew; dissertaton proposal expected Spring 2023
+ \\[.5ex]
+ Fall 2019 -- present
+ & Hubers, Alex; qualifying exam passed Spring 2022
+ \\[.5ex]
  Fall 2012 -- Summer 2019
  & {\bf Lazy Exact Real Arithmetic Using Floating Point Operations}, McCleeary, Ryan; successfully defended
  \\[.5ex]
- Fall 2017 -- present
- & Jenkins, Christopher; dissertation proposal expected Fall 2021
- \\[.5ex]
- Fall 2017 -- present
- & Cantor, Anthony; dissertation proposal expected Fall 2021
- \\[.5ex]
- Fall 2018 -- present
- & Marmaduke, Andrew; comprehensive exam planned for Fall 2021
- \\[.5ex]
- Fall 2019 -- present
- & Hubers, Alex; qualifying exam planned for Spring 2021
- \\[.5ex]
 \end{tabular}
 
+\pagebreak
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\item[] \textbf{PhD --- Committee Member, External}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\\[1.3ex]
+\begin{tabular}{l@{\quad\ }p{30em}} 
+  2022
+  & Hondet, Gabriel, ENS Paris-Saclay, France; successfully defended
+\end{tabular}
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\item[] \textbf{PhD --- Committee Member}
+\item[] \textbf{PhD --- Committee Member, U. Iowa}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{30em}} 
@@ -302,7 +332,7 @@ Iowa City, Iowa 52242
 
 \end{itemize}
 
-\pagebreak
+
 %------------------------------------
 \subsection*{Professional Mentoring}
 %------------------------------------
@@ -310,7 +340,16 @@ Iowa City, Iowa 52242
 
 \begin{itemize}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\item[] \textbf{Postdoctoral Researcher}
+\item[] \textbf{Assistant Professors}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\\[1.3ex]
+\begin{tabular}{l@{\quad\ }p{30em}} 
+ August 2016 -- June 2022
+ & Official faculty mentor for Omar Chowdhury
+\end{tabular}
+
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\item[] \textbf{Postdoctoral Researchers}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{30em}} 
@@ -448,6 +487,7 @@ Iowa City, Iowa 52242
  & StarExec, multi-community web service for logic solving, \url{www.starexec.org}
 \end{tabular}
 
+\pagebreak
 \begin{IOWA ONLY}
 %----------------------------------------
 \subsection*{Areas of Research Interest}
@@ -472,36 +512,36 @@ Iowa City, Iowa 52242
 %~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{34em}} 
- 2017 -- 2021 
+ 2017 -- 2023
  & \emph{Collaborative Research: CI-SUSTAIN: StarExec: Cross-Community Infrastructure for Logic Solving (CNS-1729603)} \\
  & Funded by the National Science Foundation. 
    Investigators: Aaron Stump, Cesare Tinelli, Geoff Sutcliffe (U. Miami). 
-   Iowa portion: \$552,195.
+   Iowa portion: \$610,641 (includes supplement).
    \smallskip \\
- 2015 -- 2021 
- & \emph{Semantics, Formal Reasoning, and Tool Support for Quantum Programming Solving (AFOSR 14944300)} \\
- & Funded by the Air Force Office of Sponsored Research (AFOSR). 
-   Investigators: Aaron Stump, Mike Mislove (Tulane), Steve Zdancewic (U. Penn).
-   Iowa portion: \$1,007,034
 \end{tabular}
+
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~
 \item[] \textbf{Completed}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{34em}} 
+ 2015 -- 2021 
+ & \emph{Semantics, Formal Reasoning, and Tool Support for Quantum Programming Solving (AFOSR 14944300)} \\
+ & Funded by the Air Force Office of Sponsored Research (AFOSR). 
+   Investigators: Aaron Stump, Mike Mislove (Tulane), Steve Zdancewic (U. Penn).
+   Iowa portion: \$1,007,034.
+   \smallskip \\
  2015 -- 2019
  & \emph{Lambda Encodings Reborn (CSF-1524519)} \\
  & Funded by the National Science Foundation. 
-   Investigator: Aaron Stump
+   Investigator: Aaron Stump.
    Iowa portion: \$468,938.
    \smallskip \\
  2018
  & \emph{Cedille Support for Ethereum} \\
- & Funded by the Ethereum Foundation. 
-   Award amount: \$50,194
-   Percent effort: one-time gift 
-   Investigator: Aaron Stump
+ & One-time gift from the Ethereum Foundation. 
+   Investigator: Aaron Stump.
    Iowa portion: \$50,194.
 
 \end{tabular}
@@ -530,6 +570,7 @@ Iowa City, Iowa 52242
 
 \end{itemize}
 
+\pagebreak
 %===================
 \section*{\service}
 %===================
@@ -548,9 +589,13 @@ Iowa City, Iowa 52242
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{34em}} 
+ 2022 & 2023 edition of the ACM Conference on Principles of Programming Languages (POPL, international conference)
+ \\[.5ex]
+ 2022 & 24th International Symposium on Trends in Functional Programming (TFP)
+ \\[.5ex]
   2021 & Logical Frameworks and Meta-Languages: Theory and Practice (LFMTP, international workshop)
    \\[.5ex]
- 2020 & ACM Conference on Principles of Programming Languages (POPL)
+ 2019 & 2020 edition of ACM Conference on Principles of Programming Languages (POPL, international conference)
  \\[.5ex]
  2020 & Formal Structures for Computation and Deduction (FSCD, international conference)
  \\[.5ex]
@@ -566,6 +611,8 @@ Iowa City, Iowa 52242
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \\[1.3ex]
 \begin{tabular}{l@{\quad\ }p{34em}} 
+ 2022 & Journal of Functional Programming, 1 article
+ \\[.5ex]
  2020 & Logical Methods in Computer Science, 2 articles
  \\[.5ex]
  2019 & Logical Methods in Computer Science, 1 article
@@ -633,7 +680,7 @@ Iowa City, Iowa 52242
 
 \begin{tabular}{l@{\quad\ }p{34em}} 
  2019 -- present 
- & creator of the Iowa Type Theory Commute podcast; 115 episodes, over 27,000 downloads as of October 1, 2021
+ & creator of the Iowa Type Theory Commute podcast; over 140 episodes, over 50,000 downloads as of January 1, 2023
  \\[.5ex]
 \end{tabular}
 
